# aichat

./: .gitignore  Button-Fix-Gude.md  FIXES-SUMMARY.md  Issue-Fixed.md  README-MAIN.md  README-TAURI-START.md  README.md  Tauri-Migration-Summary.md  Tauri-Version-Ready.md  WHITE-SCREEN-FIXED.md  White-Screen-Fix-Guide.md  forge.config.js  index.html  main.js  package-lock.json  package.json  restart-app-v1.1.bat  restart-app.bat
.claude/: settings.local.json
assets/: logo.icns
config/macos/: package.json
config/windows/: package.json
doc/: README_EN.md  log.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/js/: renderer.js
src/view/: about.html  bar.html  second.html
tauri-app/: MIGRATION-SUMMARY.md  PROJECT-SUMMARY.md  QUICKSTART.md  README-BUILD.md  README-TAURI.md  README.md  UPDATE-NOTES.md  about.html  build.bat  build.sh  conversation.html  dev.bat  dev.sh  index.html  model-settings.html  package-lock.json  package.json  proxy.html  second.html  test.html  vite.config.js  vite.config.js.bak
tauri-app/css/: about.css  conversation.css  model-settings.css  prosy.css  second.css  style.css  version.css
tauri-app/js/: about.js  conversation.js  main.js  model-settings.js  proxy.js  renderer-tauri.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/css/: bar.css  proxy.css
tauri-app/src/js/: preload.js
tauri-app/src/view/: index.html  proxy.html
